--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,8 @@
-node_modules/
-.git/
+node_modules
+.git
+.gitignore
 npm-debug.log*
-dist/
 .env
-build/
-coverage/
-.nyc_output/
+dist
+.cache
+README.md
