--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "start": "npm run build && vite preview --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.11.1",
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
     "react-spinners": "^0.17.0",
