--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 VITE_GITHUB_CLIENT_ID=Ov23ligIk1n1MnNXDZWA
 VITE_GITHUB_REDIRECT_URI=http://localhost:8080/auth/github/callback
+
+VITE_GOOGLE_CLIENT_ID=441188855882-r9hj22sh2939r6nj0jnjn1mo8tkoua6q.apps.googleusercontent.com
+VITE_GOOGLE_REDIRECT_URI=http://localhost:8080/auth/google/callback
