--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+VITE_GATEWAY_API_URL=http://localhost:8080
+VITE_UPLOADS_API_URL=http://localhost:8081
+
 VITE_GITHUB_CLIENT_ID=Ov23ligIk1n1MnNXDZWA
 VITE_GITHUB_REDIRECT_URI=http://localhost:8080/auth/github/callback
 
