--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,6 +3,12 @@ WORKDIR /app
 COPY package*.json ./
 RUN --mount=type=cache,target=/root/.npm npm ci
 COPY . .
+
+ARG VITE_GATEWAY_API_URL
+ARG VITE_UPLOADS_API_URL
+ENV VITE_GATEWAY_API_URL=$VITE_GATEWAY_API_URL
+ENV VITE_UPLOADS_API_URL=$VITE_UPLOADS_API_URL
+
 RUN npm run build
 
 FROM nginx:1.28.0-alpine3.21 AS runner
